Add migration pmd rules (#856)